[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/goal.png" type="Texture" id=1]
[ext_resource path="res://assets/goal_active.png" type="Texture" id=2]
[ext_resource path="res://Objects/Goal.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Goal" type="Node2D" groups=[
"goal",
]]
script = ExtResource( 3 )

[node name="sprite_off" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="sprite_on" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="Detector" type="Area2D" parent="."]
monitorable = false

[node name="RectShape" type="CollisionShape2D" parent="Detector"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
